fix visibility of popup

--- a/frontend/src/styles/PopupGame.module.css
+++ b/frontend/src/styles/PopupGame.module.css
@@ -1,63 +1,18 @@
-.overlay {
-  position: fixed;
-  background-position-x: 50%;
-  background-position-y: center;
-  width: 100%;
-  height: 100%;
-}
-
-.popupContainer {
-  max-width: 600px;
-  width: 100%;
-  position: fixed;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  background-color: rgba(0, 0, 0, 0.7);
-  box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
-}
-
-.closeBtn {
-  position: fixed;
-  top: 2px;
-  right: 8px;
-  cursor: pointer;
-  font-weight: bolder;
-  font-size: 1.5rem;
-  color: rgba(0, 0, 0, 1);
-  background-color: rgba(0, 0, 0, 0);
-  border: none;
-  margin: 0;
-  padding: 0;
-  overflow: visible;
-  background: transparent;
-}
-
-.content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 2rem;
-  padding: 0.5rem 2rem;
-  color: #ffffff;
-  font-size: 2.5rem;
-  font-weight: 900;
-}
-
-span {
-  color: black;
-  font-size: large;
-  font-weight: 900;
-}
-
-.croix {
+.exit {
   font-size: 2rem;
   font-weight: 900;
-  color: white;
+  color: rgb(53, 49, 49);
 }
 
-img {
-  width: 50%;
-  object-fit: cover;
+.popup-container {
+  position:fixed;
+  top:50px;
+  left:50px;
+  z-index: 50;
+  background-color: rgba(175, 166, 177, 0.7);
+  border-radius: 25px;
+}
+
+.close-button {
+  cursor: pointer;
 }
